# oop_proekt

./: CMakeLists.txt  functionalities.txt
include/: Booking.h  Camping.h  HikingGroup.h  Hut.h  Room.h  SleepingPlace.h  Tourist.h  Trail.h
src/: Booking.cpp  Camping.cpp  HikingGroup.cpp  Hut.cpp  Room.cpp  SleepingPlace.cpp  Tourist.cpp  Trail.cpp  main.cpp  tests.cpp
